<resources>
    <string name="app_name">Khavdawala</string>

    <string name="no_internet">Internet connection not available</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="name_empty">Kindly enter name.</string>
    <string name="mobile_no_empty">Kindly enter Mobile no.</string>
    <string name="bdate_no_empty">Kindly enter Birth date.</string>
    <string name="invalid_mobile_no">Kindly enter valid Mobile no.</string>

    <string name="your_name">You Name</string>
    <string name="add_plus">Add +</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="your_bd">Your Birth Date</string>
    <string name="Submit">Submit</string>
    <string name="Cart">Cart</string>
    <string name="Gift">Gift</string>
    <string name="Favourite">Favourite</string>
    <string name="Home">Home</string>
    <string name="Checkout">Checkout</string>
    <string name="Clear_Cart">Clear Cart</string>
    <string name="Notification">Notification</string>
    <string name="About">About</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="digit_1">1</string>
    <string name="you_may_like">You May Also Like</string>
    <string name="hint_search">Search Product</string>

    <string name="invalid_email">Kindly enter valid email.</string>
    <string name="invalid_address">Kindly enter valid Address.</string>
    <string name="kindly_accept_tnc">Kindly accept T&amp;C.</string>
    <string name="invalid_msg_inq">Kindly enter valid message or inquiry</string>
    <string name="alternate_mobile_no_empty">Kindly enter Alternate Mobile no.</string>
    <string name="area_empty">Kindly enter Area.</string>
    <string name="sub_area_empty">Kindly enter Sub Area.</string>
    <string name="invalid_zip">Kindly enter valid ZipCode.</string>
    <string name="city_empty">Kindly enter City name</string>
    <string name="state_empty">Kindly enter Steta name</string>
    <string name="alternate_invalid_mobile_no">Kindly enter valid Alternate Mobile no.</string>
    <string name="kindly_select_any_state">Kindly select Gujarat or Out of Gujarat</string>

    <string name="your_email">Your Email</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Amount">Amount</string>
    <string name="qty">Qty.</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="msg_inq">Your message or inquiry</string>
    <string name="address_">Address :</string>
    <string name="make_call_">Make A Call :</string>
    <string name="send_msg_">Send a Message :</string>
    <string name="empty_cart">No Items in Cart!</string>
    <string name="Delivery_Charge">Delivery Charge</string>
    <string name="Grand_Total">Grand Total</string>
    <string name="Address_Information">Address Information</string>
    <string name="Checkout_Details">Checkout Details</string>
    <string name="City">City</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Notes_if_any">Notes if any</string>
    <string name="gift_packing_">Gift packing : (Please mark the checkbox)</string>
    <string name="gift">Gift</string>
    <string name="i_agree_1">I Agree :</string>
    <string name="i_agree_2"> (Terms &amp; Condition)</string>
    <string name="tnc">Terms &amp; Condition</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="Gujarat">Gujarat</string>
    <string name="Outside_Gujarat">Out of Gujarat</string>
    <string name="Rajkot">Rajkot</string>
    <string name="Outside_Rajkot">Out of Rajkot</string>
    <string name="Select_City">Select City</string>
    <string name="Continue">Continue</string>
    <string name="Area">Area</string>
    <string name="Sub_Area">Sub Area</string>
    <string name="State">State</string>
    <string name="Zipcode">Zipcode</string>
    <string name="alternate_mobile_no">Alternate Mobile No.</string>
    <string name="payment_success_1">Congratulations!</string>
    <string name="payment_success_2">Your order is placed successfully.</string>
    <string name="Clear_Cart_msg">Are you sure want to clear your Cart? All the items in your cart will be removed.</string>
    <string name="payment_status">Payment Status</string>
    <string name="Paid_Amount">Paid Amount:</string>
    <string name="Order_No">Order No.:</string>
    <string name="Payment_Id">Payment Id:</string>

</resources>