<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    tools:context=".ui.activity.CheckoutActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/newsHomeViewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:background="@color/black"
        android:nestedScrollingEnabled="true"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_top3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsHomeViewPager"
        android:layout_marginVertical="@dimen/dp_5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_10">

            <RelativeLayout
                android:id="@+id/rl_sbtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_5"
                android:background="@drawable/white_rounded_corner_bg"
                android:paddingHorizontal="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_subtotal"
                    style="@style/CheckoutTextView"
                    android:layout_width="wrap_content"
                    android:text="@string/Subtotal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_total_amount"
                    style="@style/CheckoutTextView"
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/tv_subtotal"
                    android:gravity="end"
                    tools:text="Rs. 150" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_delivery_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_sbtotal"
                android:layout_marginVertical="@dimen/dp_5"
                android:background="@drawable/white_rounded_corner_bg"
                android:paddingHorizontal="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_delivery_charge"
                    style="@style/CheckoutTextView"
                    android:layout_width="wrap_content"
                    android:text="@string/Delivery_Charge"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_delivery_charge_amount"
                    style="@style/CheckoutTextView"
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/tv_delivery_charge"
                    android:gravity="end"
                    tools:text="Rs. 20" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_grand_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_delivery_charge"
                android:layout_marginVertical="@dimen/dp_5"
                android:background="@drawable/red_rounded_corner_bg"
                android:paddingHorizontal="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_grand_total"
                    style="@style/CheckoutTextView"
                    android:layout_width="wrap_content"
                    android:text="@string/Grand_Total"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_grand_total_amount"
                    style="@style/CheckoutTextView"
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/tv_grand_total"
                    android:gravity="end"
                    android:textColor="@color/white"
                    tools:text="Rs. 170" />
            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_grand_total"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CheckoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/Address_Information" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/tvGujarat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gujarat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/tvOutsideGuj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Outside Gujarat"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/tvRajkot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rajkot"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/tvOutSideRaj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Outside Rajkot"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CheckoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/Checkout_Details" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    style="@style/CommonEditText"
                    android:hint="@string/mobile_no"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:maxLength="10" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_city"
                    style="@style/CommonEditText"
                    android:hint="@string/City"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    style="@style/CommonEditText"
                    android:hint="@string/your_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    style="@style/CommonEditText"
                    android:hint="@string/your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_delivery_address"
                    style="@style/CommonEditText"
                    android:gravity="top|start"
                    android:hint="@string/Delivery_Address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress|textMultiLine"
                    android:minLines="4" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_notes"
                    style="@style/CommonEditText"
                    android:gravity="top|start"
                    android:hint="@string/Notes_if_any"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:minLines="4" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbGiftPack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/btnBG"
                    android:fontFamily="@font/medium"
                    android:text="@string/gift_packing_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbIAgree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:buttonTint="@color/btnBG"
                    android:fontFamily="@font/medium"
                    android:text="@string/i_agree_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_place_order"
                    style="@style/CommonButton"
                    android:layout_margin="@dimen/dp_0"
                    android:text="@string/Submit" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar" />
</RelativeLayout>