<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_image"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_20"
    tools:context=".ui.activity.RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:src="@drawable/logo"
        android:transitionName="logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        style="@style/CommonEditText"
        android:hint="@string/your_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLength="30" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMob"
        style="@style/CommonEditText"
        android:hint="@string/mobile_no"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:maxLength="10" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etBirthDate"
        style="@style/CommonEditText"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/your_bd"
        android:imeOptions="actionDone"
        android:inputType="numberSigned" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmitRegister"
            style="@style/CommonButton"
            android:text="@string/Submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pbRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminateTint="@color/btnBG"
            android:indeterminateTintMode="multiply"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btSubmitRegister"
            app:layout_constraintEnd_toEndOf="@+id/btSubmitRegister"
            app:layout_constraintStart_toStartOf="@+id/btSubmitRegister"
            app:layout_constraintTop_toTopOf="@+id/btSubmitRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>