<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_image"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingVertical="@dimen/dp_30"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <WebView
            android:id="@+id/wbMap"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            tools:ignore="WebViewLayout" />

        <ProgressBar
            android:id="@+id/pbContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/btnBG"
            android:indeterminateTintMode="multiply"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_30">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:text="@string/address_"
                android:textColor="@color/btnBG"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                tools:text="COLORS OF GUJARAT" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                tools:text="208, GURURAKSHA COMPLEX, NEAR SBI BANK, TAGORE ROAD, VIRANI CHOWK, RAJKOT - 360002 (GUJARAT)" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_margin="@dimen/dp_5"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:text="@string/make_call_"
                android:textColor="@color/btnBG"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                tools:text="+91 98253 15700" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_margin="@dimen/dp_5"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:text="@string/send_msg_"
                android:textColor="@color/btnBG"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/dp_5"
                android:paddingVertical="@dimen/dp_2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                tools:text="info@colorsofgujarat.in" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dp_5"
                android:background="@drawable/white_rounded_corner_bg"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_10"
                android:text="@string/get_in_touch"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/CommonEditText"
                android:hint="@string/your_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/CommonEditText"
                android:hint="@string/your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMobile"
                style="@style/CommonEditText"
                android:hint="@string/mobile_no"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="10" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSuggestion"
                style="@style/CommonEditText"
                android:gravity="start"
                android:hint="@string/msg_inq"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:minLines="5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSubmitRegister"
                    style="@style/CommonButton"
                    android:text="@string/Submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbRegister"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminateTint="@color/btnBG"
                    android:indeterminateTintMode="multiply"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btSubmitRegister"
                    app:layout_constraintEnd_toEndOf="@+id/btSubmitRegister"
                    app:layout_constraintStart_toStartOf="@+id/btSubmitRegister"
                    app:layout_constraintTop_toTopOf="@+id/btSubmitRegister" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>